[gd_scene load_steps=7 format=3 uid="uid://ckq3dw3qp2l4c"]

[ext_resource type="Script" uid="uid://6gcgnxhg0sk7" path="res://src/inventory/inventory_item_container_ui.gd" id="1_5uada"]
[ext_resource type="Texture2D" uid="uid://8wxs5gfjck4l" path="res://assets/icon.svg" id="1_gg5po"]
[ext_resource type="Texture2D" uid="uid://broddx13mtpjh" path="res://assets/textures/icons/ui_icons.png" id="2_5uada"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_6fi6k"]
load_path = "res://.godot/imported/ui_icons.png-621372537a5a3adea98e450df4f6f600.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_uo2fv"]
atlas = SubResource("CompressedTexture2D_6fi6k")
region = Rect2(4, 0, 9, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_047uy"]
atlas = ExtResource("2_5uada")
region = Rect2(19, 0, 10, 16)

[node name="ItemContainer" type="PanelContainer"]
script = ExtResource("1_5uada")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Icon" type="TextureRect" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("1_gg5po")
expand_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 10
size_flags_stretch_ratio = 1.57
text = "Item"

[node name="TypeLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 2
theme_override_colors/font_color = Color(0.7121294, 0.7121294, 0.71212935, 1)
theme_override_font_sizes/font_size = 11

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
modulate = Color(1, 0.8784314, 0.1882353, 1)
layout_mode = 2
size_flags_horizontal = 8

[node name="ValueLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0"
horizontal_alignment = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_uo2fv")

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
modulate = Color(0.7137255, 0.7137255, 0.7137255, 1)
layout_mode = 2
size_flags_horizontal = 8

[node name="WeightLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "0"
horizontal_alignment = 2

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer2"]
layout_mode = 2
texture = SubResource("AtlasTexture_047uy")
